--- a/src/views/pages/partials/form.ejs
+++ b/src/views/pages/partials/form.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="<%= url %>">
+<form method="post" action="<%= url %>">
 
   <div class="field">
     <label class="label">Nome</label>
