--- a/src/views/pages/partials/form.ejs
+++ b/src/views/pages/partials/form.ejs
@@ -3,7 +3,7 @@
   <div class="field">
     <label class="label">Nome</label>
     <div class="control">
-      <input class="input" type="text" name="checklist[name]" placeholder="Lista de Tarefas" value="<% checklist.name %>">
+      <input class="input" type="text" name="checklist[name]" placeholder="Lista de Tarefas" value="<%= checklist.name %>">
 
     <% if(checklist.error && checklist.error.hasOwnProperty('name')) { %>
       <!-- se veio o erro devemos mostrar a msgm -->
